--- a/.config/i3/config
+++ b/.config/i3/config
@@ -51,6 +51,7 @@ set $work9 " 9"
 ## Startup applications
 exec_always feh --bg-scale feh --bg-scale ~/Pictures/low-poly-wallpaper-1.jpg
 exec_always compton --config ~/.config/compton/config -cb
+exec_always xrandr --output HDMI2 --left-of HDMI3
 #exec_always yabar
 
 
@@ -143,6 +144,9 @@ bindsym $mod+Shift+7 move container to workspace $work7
 bindsym $mod+Shift+8 move container to workspace $work8
 bindsym $mod+Shift+9 move container to workspace $work9
 # bindsym $mod+Shift+0 move container to workspace 10
+
+# Move workspace to other screen
+bindsym $mod+m move workspace to output left
 
 # Assign application to workspace
 #assign [class="spotify"] → $work9
