changed workspace icons

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -49,13 +49,13 @@ focus_follows_mouse no
 
 ## Workspaces
 set $work1 " 1"
-set $work2 " 2"
-set $work3 " 3"
+set $work2 " 2"
+set $work3 " 3"
 set $work4 "4"
 set $work5 "5"
 set $work6 "6"
 set $work7 " 7"
-set $work8 "8"
+set $work8 "8"
 set $work9 " 9"
 set $work0 " 0"
 
